@startuml Order Module: Classes & Interfaces

!define INTERFACE_COLOR #FFE66D
!define SERVICE_COLOR #95E1D3
!define USECASE_COLOR #F38181
!define REPO_COLOR #AA96DA

' ============ DTOs ============
class ReservationResult {
    Status: ReservationStatus
    OrderID: uint
    TotalPrice: float64
    Successes: []ItemSuccess
    Failures: []ItemFailure
}

class ItemSuccess {
    ProductID: int
    Quantity: int
}

class ItemFailure {
    ProductID: int
    Quantity: int
    Reason: FailureReason
}

class ReservationItem {
    ProductID: int
    Quantity: int
    Price: float64
}

enum ReservationStatus {
    ALL_SUCCESS
    PARTIAL
    ALL_FAILED
}

enum FailureReason {
    NOT_FOUND
    OUT_OF_STOCK
    INSUFFICIENT_AVAILABLE
    PRODUCT_INACTIVE
}

ReservationResult *-- ItemSuccess
ReservationResult *-- ItemFailure
ReservationResult -- ReservationStatus
ItemFailure -- FailureReason

' ============ Service Layer ============
package "service" {
    interface TransactionManager <<interface>> #INTERFACE_COLOR {
        BeginTx(ctx, opts): (*sql.Tx, error)
    }

    interface ProductRepository <<interface>> #INTERFACE_COLOR {
        FindByIDForUpdate(ctx, tx, productID, companyID): (*Product, error)
        IncrementReservedStock(ctx, tx, productID, qty): error
    }

    interface OrderItemRepository <<interface>> #INTERFACE_COLOR {
        Insert(ctx, tx, item): (uint, error)
    }

    interface OrderRepository <<interface>> #INTERFACE_COLOR {
        UpdateStatus(ctx, tx, id, status): error
        UpdateTotalPrice(ctx, tx, id, price): error
    }

    class ReservationService #SERVICE_COLOR {
        - db: TransactionManager
        - productRepo: ProductRepository
        - orderItemRepo: OrderItemRepository
        - orderRepo: OrderRepository
        - logger: *zap.Logger

        + NewReservationService(...): *ReservationService
        + ReserveItems(ctx, orderID, companyID, items, hasStockControl): (*ReservationResult, error)
        - reserveSingleItem(...): (*ItemSuccess, *ItemFailure, error)
    }

    ReservationService --|> TransactionManager
    ReservationService --|> ProductRepository
    ReservationService --|> OrderItemRepository
    ReservationService --|> OrderRepository
}

' ============ UseCase Layer ============
package "usecase" {
    interface StockReservationService <<interface>> #INTERFACE_COLOR {
        ReserveItems(ctx, orderID, companyID, items, hasStockControl): (*ReservationResult, error)
    }

    interface OrderRepository_UC <<interface>> #INTERFACE_COLOR {
        FindByID(ctx, id): (*Order, error)
    }

    interface CompanyConfigRepository <<interface>> #INTERFACE_COLOR {
        FindByCompanyID(ctx, companyID): (*CompanyConfig, error)
    }

    class ReserveAndAddUseCase #USECASE_COLOR {
        - orderRepo: OrderRepository_UC
        - companyConfigRepo: CompanyConfigRepository
        - reservationSvc: StockReservationService
        - logger: *zap.Logger

        + NewReserveAndAddUseCase(...): *ReserveAndAddUseCase
        + ReserveItems(ctx, orderID, companyID, items): (*ReservationResult, error)
        - reserveItemsWithRetry(...): (*ReservationResult, error)
    }

    ReserveAndAddUseCase --|> StockReservationService
    ReserveAndAddUseCase --|> OrderRepository_UC
    ReserveAndAddUseCase --|> CompanyConfigRepository
}

' ============ Repository Layer ============
package "repository" {
    class MySQLOrderRepository #REPO_COLOR {
        - db: *sql.DB
        + NewMySQLOrderRepository(db): *MySQLOrderRepository
        + FindByID(ctx, id): (*Order, error)
        + UpdateStatus(ctx, tx, id, status): error
        + UpdateTotalPrice(ctx, tx, id, price): error
    }

    class MySQLOrderItemRepository #REPO_COLOR {
        - db: *sql.DB
        + NewMySQLOrderItemRepository(db): *MySQLOrderItemRepository
        + Insert(ctx, tx, item): (uint, error)
    }

    class MySQLProductRepository #REPO_COLOR {
        - db: *sql.DB
        + NewMySQLRepository(db): *MySQLRepository
        + FindByIDForUpdate(ctx, tx, productID, companyID): (*Product, error)
        + IncrementReservedStock(ctx, tx, productID, qty): error
    }

    class MySQLCompanyConfigRepository #REPO_COLOR {
        - db: *sql.DB
        + NewMySQLCompanyConfigRepository(db): *MySQLCompanyConfigRepository
        + FindByCompanyID(ctx, companyID): (*CompanyConfig, error)
    }
}

' ============ Domain Layer ============
package "domain" {
    class Product {
        ID: int
        Name: string
        Stock: *int
        ReservedStock: *int
        IsActive: bool
        Stockeable: bool
        HasStock: bool
        + AvailableStock(): int
    }

    class Order {
        ID: uint
        CompanyID: int
        Status: string
        TotalPrice: float64
    }

    class OrderItem {
        OrderID: uint
        ProductID: int
        Quantity: int
        Price: float64
    }

    class CompanyConfig {
        CompanyID: int
        HasStock: bool
    }
}

' ============ Dependencies ============
ReservationService --> ReservationItem
ReservationService --> ReservationResult
ReservationService --> Product
ReservationService --> OrderItem

ReserveAndAddUseCase --> ReservationItem
ReserveAndAddUseCase --> ReservationResult
ReserveAndAddUseCase --> Order
ReserveAndAddUseCase --> CompanyConfig

' Implementations satisfy interfaces
MySQLOrderRepository ..|> OrderRepository
MySQLOrderItemRepository ..|> OrderItemRepository
MySQLProductRepository ..|> ProductRepository
MySQLCompanyConfigRepository ..|> CompanyConfigRepository

' UseCase depends on Service interface (which ReservationService implements)
ReservationService ..|> StockReservationService
ReserveAndAddUseCase --> StockReservationService

note right of ReservationService
    Manages transaction lifecycle
    Coordinates multiple operations
    Atomicity guaranteed
end note

note right of ReserveAndAddUseCase
    Pure orchestration
    Pre-validations & sorting
    Retry logic with jitter
end note

@enduml
